--- a/package.json
+++ b/package.json
@@ -13,23 +13,69 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
+		"@inngest/agent-kit": "^0.13.2",
 		"@opennextjs/cloudflare": "^1.14.2",
 		"@prisma/adapter-pg": "^7.1.0",
 		"@prisma/client": "^7.1.0",
+		"@radix-ui/react-accordion": "^1.2.12",
+		"@radix-ui/react-alert-dialog": "^1.1.15",
+		"@radix-ui/react-aspect-ratio": "^1.1.8",
+		"@radix-ui/react-avatar": "^1.1.11",
+		"@radix-ui/react-checkbox": "^1.3.3",
+		"@radix-ui/react-collapsible": "^1.1.12",
+		"@radix-ui/react-context-menu": "^2.2.16",
+		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-hover-card": "^1.1.15",
+		"@radix-ui/react-label": "^2.1.8",
+		"@radix-ui/react-menubar": "^1.1.16",
+		"@radix-ui/react-navigation-menu": "^1.2.14",
+		"@radix-ui/react-popover": "^1.1.15",
+		"@radix-ui/react-progress": "^1.1.8",
+		"@radix-ui/react-radio-group": "^1.3.8",
+		"@radix-ui/react-scroll-area": "^1.2.10",
+		"@radix-ui/react-select": "^2.2.6",
+		"@radix-ui/react-separator": "^1.1.8",
+		"@radix-ui/react-slider": "^1.3.6",
+		"@radix-ui/react-slot": "^1.2.4",
+		"@radix-ui/react-switch": "^1.2.6",
+		"@radix-ui/react-tabs": "^1.1.13",
+		"@radix-ui/react-toggle": "^1.1.10",
+		"@radix-ui/react-toggle-group": "^1.1.11",
+		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tanstack/react-query": "^5.90.12",
-		"@trpc/client": "^11.0.0",
+		"@trpc/client": "^11.7.2",
 		"@trpc/react-query": "^11.0.0",
-		"@trpc/server": "^11.0.0",
+		"@trpc/server": "^11.7.2",
+		"@trpc/tanstack-react-query": "^11.7.2",
 		"@types/pg": "^8.15.6",
+		"class-variance-authority": "^0.7.1",
+		"client-only": "^0.0.1",
+		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
+		"date-fns": "^4.1.0",
 		"dotenv": "^17.2.3",
+		"embla-carousel-react": "^8.6.0",
 		"inngest": "^3.47.0",
+		"input-otp": "^1.4.2",
+		"lucide-react": "^0.556.0",
 		"next": "15.5.7",
+		"next-themes": "^0.4.6",
 		"pg": "^8.16.3",
 		"prisma": "^7.1.0",
 		"react": "19.1.2",
+		"react-day-picker": "^9.12.0",
 		"react-dom": "19.1.2",
+		"react-hook-form": "^7.68.0",
+		"react-resizable-panels": "^3.0.6",
+		"recharts": "2.15.4",
+		"server-only": "^0.0.1",
+		"sonner": "^2.0.7",
 		"superjson": "^2.2.6",
+		"tailwind-merge": "^3.4.0",
 		"tsx": "^4.21.0",
+		"vaul": "^1.1.2",
 		"zod": "^4.1.13"
 	},
 	"devDependencies": {
@@ -41,6 +87,7 @@
 		"eslint": "^9",
 		"eslint-config-next": "15.4.6",
 		"tailwindcss": "^4",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5",
 		"wrangler": "^4.53.0"
 	}
