--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint",
+		"lint": "biome lint .",
+		"lint:fix": "biome lint --write .",
+		"format": "biome format --write .",
+		"check": "biome check --write .",
 		"deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
 		"upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
 		"preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
 	},
 	"dependencies": {
+		"@e2b/code-interpreter": "^2.3.3",
 		"@hookform/resolvers": "^5.2.2",
 		"@inngest/agent-kit": "^0.13.2",
 		"@opennextjs/cloudflare": "^1.14.2",
@@ -79,13 +83,11 @@
 		"zod": "^4.1.13"
 	},
 	"devDependencies": {
-		"@eslint/eslintrc": "^3",
+		"@biomejs/biome": "2.3.8",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^24.10.1",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
-		"eslint": "^9",
-		"eslint-config-next": "15.4.6",
 		"tailwindcss": "^4",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5",
