--- a/biome.jsonc
+++ b/biome.jsonc
@@ -25,7 +25,7 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true,
+			"recommended": false,
 			"a11y": {
 				// Biome requires explicit htmlFor/id but adjacent label+input is valid HTML
 				"noLabelWithoutControl": "off",
