--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
 		"deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
 		"upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
 		"preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
+		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts",
+		"e2b:build:dev": "cd sandbox-template && npx tsx build.dev.ts",
+		"e2b:build:prod": "cd sandbox-template && npx tsx build.prod.ts"
 	},
 	"dependencies": {
 		"@e2b/code-interpreter": "^2.3.3",
+		"@gsap/react": "^2.1.2",
 		"@hookform/resolvers": "^5.2.2",
 		"@inngest/agent-kit": "^0.13.2",
 		"@opennextjs/cloudflare": "^1.14.2",
@@ -60,13 +63,16 @@
 		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"dotenv": "^17.2.3",
+		"e2b": "^2.8.4",
 		"embla-carousel-react": "^8.6.0",
+		"gsap": "^3.13.0",
 		"inngest": "^3.47.0",
 		"input-otp": "^1.4.2",
 		"lucide-react": "^0.556.0",
 		"next": "15.5.7",
 		"next-themes": "^0.4.6",
 		"pg": "^8.16.3",
+		"postprocessing": "^6.38.0",
 		"prisma": "^7.1.0",
 		"react": "19.1.2",
 		"react-day-picker": "^9.12.0",
@@ -78,6 +84,7 @@
 		"sonner": "^2.0.7",
 		"superjson": "^2.2.6",
 		"tailwind-merge": "^3.4.0",
+		"three": "^0.181.2",
 		"tsx": "^4.21.0",
 		"vaul": "^1.1.2",
 		"zod": "^4.1.13"
@@ -88,6 +95,8 @@
 		"@types/node": "^24.10.1",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@types/three": "^0.181.0",
+		"shadcn": "^3.5.2",
 		"tailwindcss": "^4",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5",
